Re-formatted and colored welcome back page

--- a/app/_locales/en/messages.json
+++ b/app/_locales/en/messages.json
@@ -1120,7 +1120,7 @@
     "message": "Unlock"
   },
   "unlockMessage": {
-    "message": "The decentralized web awaits"
+    "message": "Get paid for every ad you see"
   },
   "uriErrorMsg": {
     "message": "URIs require the appropriate HTTP/HTTPS prefix."
