ui changes; primarily issue #72: remove details button, put Export Private Key on settings

--- a/app/_locales/en/messages.json
+++ b/app/_locales/en/messages.json
@@ -211,7 +211,7 @@
     "description": "Exchange type (cryptocurrencies)"
   },
   "currentConversion": {
-    "message": "Current Conversion"
+    "message": "Currency Conversion"
   },
   "currentNetwork": {
     "message": "Current Network"
