Changed version #. Refactored info page.

--- a/app/_locales/en/messages.json
+++ b/app/_locales/en/messages.json
@@ -90,7 +90,7 @@
   "message": "Your Browser is not supported..."
   },
   "builtInCalifornia": {
-    "message": "MetaMask is designed and built in California."
+    "message": "ClearCoin is a California based company."
   },
   "buy": {
     "message": "Buy"
