ui improvements; fix #105: Loading mask does not cover entire height of popup

--- a/app/_locales/en/messages.json
+++ b/app/_locales/en/messages.json
@@ -416,6 +416,9 @@
   "getHelp": {
     "message": "Get Help."
   },
+  "getStarted": {
+    "message": "Get Started"
+  },
   "greaterThanMin": {
     "message": "must be greater than or equal to $1.",
     "description": "helper for inputting hex as decimal input"
